--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                     </div>
                     <div>
                         <h2 class="about__subtitle">I'am Andrey</h2>
-                        <p class="about__text">Studied Front-end Development from october 2020 to april 2021 at <a href="https://careers.epam.by/training/upskilllab" target="_blank">EPAM UpSkill Lab</a> based on <a href="https://rs.school/" target="_blank">The Rolling Scopes School</a> course under the guidance of a mentor.<br>I'm fond of fishing and board games.<br>Currently, I'm  looking for a job or internship to improve my skills and knowledge.<br>Ready for relocation and business trips.</p>           
+                        <p class="about__text">Studied Front-end Development from october 2020 to april 2021 at <a href="https://careers.epam.by/training/upskilllab" target="_blank">EPAM UpSkill Lab</a> based on <a href="https://rs.school/" target="_blank">The Rolling Scopes School</a> course under the guidance of a mentor.<br>
+                            Graduated from <a href="https://exadel.com/" target="_blank">Exadel</a> Angular internship.<br>
+                            Web application development to determine the knowledge of English language.<br>
+                            Value: to shorten the recruitment process at the stage of language level evaluation.<br>
+                            Development of Login pages/ modal windows and the contents/ app menu/ users' profiles and design according to requirements of SRS.</p>
                     </div>                                   
                 </div>
             </section>
@@ -65,7 +69,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">I have basic skills in  Node JS, Git, Web Socket, Visual Studio Code, REST API, Chrome Dev Tools, SCSS, Webpack. Cross-browser, adaptive layout. Use of BEM names in markup. Semantics.Figma. Optimization of code and images.</p>
+                        <p class="skills__text">  Angular, Rxjs, Angular Material, REST API, Git, SCSS, Figma. Cross-browser, adaptive layout.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
@@ -101,10 +105,10 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                      <a href="https://casterweb.github.io/singolo/" target="_blank"> <img src="assets/img/singolo.jpg" alt=""></a> 
+                      <a href="https://casterweb.github.io/Whack-A-Mole/" target="_blank"> <img src="assets/img/whack-a-mole.jpg" alt=""></a>
                     </div>
                     <div class="work__img">
-                      <a href="https://casterweb.github.io/Flex-Panel-Gallery/" target="_blank"> <img src="assets/img/FlexPanelGallery.jpg" alt=""></a> 
+                      <a href="https://casterweb.github.io/Calculator/" target="_blank"> <img src="assets/img/calculator.jpg" alt=""></a>
                     </div>
                     <div class="work__img">
                        <a href="https://casterweb.github.io/fancy-weather/" target="_blank"><img src="assets/img/fancyWeather.jpg" alt=""></a> 
@@ -119,8 +123,8 @@
                       <a href="https://casterweb.github.io/Raindrops/" target="_blank"><img src="assets/img/Raindrops.jpg" alt=""></a>  
                     </div>
                 </div>
-            </section>         
-            
+            </section>
+
         </main>
 
         <!--===== FOOTER =====-->
