--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Andrey</span><br>Front-end Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Andrey</span><br>Frontend Developer</h1>
                 </div>
             </section>
 
